--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   collection: ^1.16.0
   carousel_slider: ^4.1.1
+  google_fonts: ^3.0.1
   flutter:
     sdk: flutter
 
